--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,167 @@
+@font-face {
+  font-family: LuckiestGuy-Regular;
+  src: url("/fonts/LuckiestGuy-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  text-transform: capitalize !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html,
+body {
+  max-width: 100dvw;
+  font-family: LuckiestGuy-Regular;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Fallback handling */
+.font-loading {
+  font-family: sans-serif;
+  visibility: hidden;
+}
+
+.font-loaded {
+  font-family: "LuckiestGuy", sans-serif;
+  visibility: visible;
+}
+
+section {
+  padding: 50px 0px;
+  height: 100dvh;
+}
+
+.hero {
+  background-color: #000;
+
+  .img {
+    padding: 0;
+    z-index: 111;
+    img {
+      border-radius: 50%;
+    }
   }
+  .text {
+    color: #fff;
+    z-index: 111;
+
+    h1 {
+      font-size: 6.25rem;
+    }
+    h2 {
+      font-size: 2.5rem;
+    }
+
+    .links {
+      padding: 20px 0px;
+      span {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #3d3d3d59;
+        padding: 5px;
+        margin: 0px 10px;
+        border-radius: 50%;
+        transition: all 0.3s ease-in-out;
+
+        a {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          transition: all 0.3s ease-in-out;
+
+          svg {
+            font-size: 30px;
+          }
+        }
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+
+      .kick {
+        a {
+          color: #2bff00;
+        }
+        &:hover {
+          filter: drop-shadow(0 0 10px #2bff00);
+          a {
+            color: #fff;
+          }
+        }
+      }
+
+      .tiktok {
+        a {
+          color: #ff0055;
+        }
+        &:hover {
+          filter: drop-shadow(0 0 10px #ff0055);
+          a {
+            color: #fff;
+          }
+        }
+      }
+
+      .whatsApp {
+        a {
+          color: #2bff00;
+        }
+        &:hover {
+          filter: drop-shadow(0 0 10px #2bff00);
+          a {
+            color: #fff;
+          }
+        }
+      }
+
+      .instagram {
+        a {
+          color: #c300ff;
+        }
+        &:hover {
+          filter: drop-shadow(0 0 10px #c300ff);
+
+          a {
+            color: #fff;
+          }
+        }
+      }
+
+      .facebook {
+        a {
+          color: #0044ff;
+        }
+        &:hover {
+          filter: drop-shadow(0 0 10px #0044ff);
+          a {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+/* hide scrollbar */
+::-webkit-scrollbar {
+  display: none;
+}
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
